# CRUD_project

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: crud.py  database.py  models.py  router.py  schemas.py
frontend/: app.py
frontend/.streamlit/: config.toml
